Adding put and delete
