# models/services.js
@@ -31,4 +31,4 @@ const serviceSchema = new mongoose.Schema({
 
 });
 
-module.exports = mongoose.model('Service', serviceSchema);
+module.exports = mongoose.model('Services', serviceSchema);
