# routes/services.js
@@ -8,9 +8,6 @@ router.get('/',
       servicesController.getAll);
 
 
-module.exports = router;
-
-
 router.post('/',
     /* #swagger.tags = ['Services']
       #swagger.description = 'Create a Service'
@@ -27,7 +24,83 @@ router.post('/',
         price: 120000,
         description: "Basic service"
         }
+        
       }*/
       servicesController.createService);
 
+router.put('/:id',
+  /* #swagger.tags = ['Services']
+      #swagger.description = 'Update a Service'
+      #swagger.parameters['id'] = {
+      in: 'path',
+      description: 'Service Id',
+      required: true,
+      type: 'string'}
+      
+      #swagger.parameters['body'] = {
+      in: 'body',
+      description: 'Updated service data',
+      required: true,
+      schema: {
+        service: "oil change",
+        vehicleType: "car",
+        category: "maintenance",
+        technician: "Carlos",
+        location: "Bogota",
+        price: 120000,
+        description: "Basic service"}
+      }
+
+      #swagger.responses[200] = {
+      description: 'Service updated successfully',
+      schema: {
+         message: "Service updated succesfully",
+         data: {
+        _id: "69be117a9ce90d2b8b5769f8",
+        service: "oil change",
+        vehicleType: "car",
+        category: "maintenance",
+        technician: "Javier",
+        location: "Bogota",
+        price: 150000,
+        description: "Updated service"}
+      }
+    }
+
+    #swagger.responses[404] = {
+      description: 'Service not found'
+    }*/
+      servicesController.updateService);
+
+
+router.delete('/:id',
+  /* #swagger.tags = ['Services']
+      #swagger.description = 'Delete a Service'
+      #swagger.parameters['id'] = {
+      in: 'path',
+      description: 'Service Id',
+      required: true,
+      type: 'string'}
+      
+    
+
+      #swagger.responses[200] = {
+      description: 'Service deleted successfully',
+      schema: {
+        message: 'Service deleted successfully',
+        data: {
+        _id: "69be117a9ce90d2b8b5769f8",
+        }
+      }
+    }
+
+    #swagger.responses[404] = {
+      description: 'Service not found'
+    }*/
+      servicesController.deleteService);
+
+
+
+
+module.exports = router;
 
